Fix avatar cutoff on update stories
Before: http://i.imgur.com/gSjsGAl.png
After: http://i.imgur.com/5Jct3sO.png

--- a/app/styles/layout/_feeds.scss
+++ b/app/styles/layout/_feeds.scss
@@ -419,11 +419,10 @@
   width: 20px;
   height: 20px;
   display: inline-block;
-  overflow: hidden;
   float: left;
   margin-right: 10px;
   img {
-    border-radius: 999em;
+    border-radius: 100%;
     width: 100%;
     height: 100%;
     background: $eggshell;
